# plataforma-seal

./: .gitignore  OFFICIAL_TECH_SPEC_SEAL.txt  README.md  package-lock.json  pyproject.toml  render.yaml
backend/: README.md  requirements.txt
backend/apps/commissions/: admin.py  api.py  apps.py  models.py  schemas.py
backend/apps/crm/: admin.py  api.py  apps.py  models.py  schemas.py
backend/apps/onboarding/: admin.py  api.py  models.py  schemas.py
backend/apps/profiles/: admin.py  api.py  apps.py  models.py  schemas.py
backend/apps/resources/: admin.py  api.py  apps.py  models.py  schemas.py
backend/apps/training/: admin.py  api.py  apps.py  models.py  schemas.py
backend/core/: api.py  asgi.py  auth.py  settings.py  urls.py  wsgi.py
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ThemeToggle.tsx
frontend/src/components/Dashboard/: HeptagramChart.tsx  HypeCounter.tsx  ProgressBar.tsx  index.ts
frontend/src/components/Layout/: MainLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  index.ts
frontend/src/lib/: api.ts  supabase.ts
frontend/src/pages/: index.ts
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/commissions/: CommissionsPage.tsx
frontend/src/pages/crm/: FrontlinePage.tsx
frontend/src/pages/dashboard/: WarRoomPage.tsx
frontend/src/router/: OnboardingRouter.tsx  ProtectedRoute.tsx  index.tsx
frontend/src/stores/: authStore.ts  themeStore.ts
(+5 files in other folders)
